service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  type: LoadBalancer
  ports:
  - port: 8200
    targetPort: 8200
    name: http
  selector:
    app: vault
